# 2MonthProject

./: .gitignore  AI Automation Opportunity by Vertical at Abacus Insights.docx  Abacus Insights verticals ranked by AI automation efficiency gain potential.docx  CLAUDE.md  README.md  problem statement.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: analytics.py  claims.py  investigation.py  ncci.py
backend/app/data/: loader.py
backend/app/data/schemas/: __init__.py  claims.py  evidence.py  investigation.py
backend/app/evidence/: ncci_engine.py  rag_embeddings.py  rag_ingest.py  rag_retriever.py
backend/app/ml/: explainer.py  features.py  model.py  pipeline.py  rules_baseline.py
backend/app/orchestrator/: evidence.py  graph.py  rationale.py  tools.py  triage.py
backend/app/orchestrator/prompts/: rationale.md
backend/app/utils/: collections.py  sse.py
backend/data/policy_docs/cms_claims_manual/: clm104c12_physicians_em.txt  (+3 more)
backend/data_generation/: generate_receipt_dates.py  generate_synthea.py  inject_anomalies.py  validate.py
backend/scripts/: fetch_public_data.py  generate_synthetic_corpus.py  score_claims.py  setup_evidence.py  train_model.py  validate_prompt.py
backend/tests/: test_api.py  test_api_ndarray_regression.py  test_data_loader.py  test_features.py  test_model.py  test_ncci_engine.py  test_orchestrator.py  test_performance.py  test_rag_embeddings.py  test_rag_ingest.py  test_retriever.py  test_rules_baseline.py  test_validate_prompt.py
(+118 files in other folders)
